# Wex-Framework

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: setup_msvc.ps1
.github/workflows/: cmake.yml  msbuild.yml
include/Wex/: Wex.ixx
src/: Wex.cpp
src/Wex/: Wex.cpp
test/: CMakeLists.txt  FixtureWexTestExample.cpp
test/Examples/: FixtureWexTestExample.cpp  InitialWexTests.cpp
test/Wex/: WexTest.cpp
